--- a/amy_zeng_complete/admin/config.yml
+++ b/amy_zeng_complete/admin/config.yml
@@ -16,7 +16,6 @@ collections:
           - {label: Phone Number, name: phone, widget: string, default: "9177 2688"}
           - {label: WeChat, name: wechat, widget: string, default: "a91772688"}
           - {label: Email, name: email, widget: string}
-          - {label: PA Email, name: pa_email, widget: string}
 
   - name: properties
     label: Properties
@@ -24,13 +23,10 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: Property Title, name: title, widget: string}
+      - {label: Title, name: title, widget: string}
       - {label: Status, name: status, widget: select, options: [sold, rented, available]}
-      - {label: District, name: district, widget: string}
       - {label: Price, name: price, widget: string}
-      - {label: Above Valuation, name: above_valuation, widget: string, required: false}
       - {label: Description, name: body, widget: markdown}
-      - {label: Featured, name: featured, widget: boolean, default: false}
 
   - name: testimonials
     label: Testimonials
@@ -39,6 +35,4 @@ collections:
     slug: "{{slug}}"
     fields:
       - {label: Client Name, name: name, widget: string}
-      - {label: Property Details, name: property, widget: string}
       - {label: Testimonial, name: content, widget: text}
-      - {label: Featured, name: featured, widget: boolean, default: false}
