--- a/amy_zeng_complete/admin/config.yml
+++ b/amy_zeng_complete/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
   name: git-gateway
   branch: main
+  auth_type: implicit
+  app_id: your-site-id
 
 media_folder: "images"
 public_folder: "/images"
